# bot

./: .breakpoints  .gitignore  .replit  Backups.java  CONTRIBUTING.md  LICENCE.md  PATCHNOTES.txt  PP.md  README.md  REQUIREMENTS.txt  SetupDb.java  backlog.py  customCooldown.py  git_token.txt  keep_alive.py  main.py  mainfeatures.py  math.py  misc.py  pyproject.toml  restart.py  setup.sh  troll.py  upvoteData.json
cogs/: README.md  admin.py  games.py  mainfeatures.py  math.py  member.py  message.py  misc.py  setups.py  troll.py  voice.py
json/: TorD.csv  autoresponse.csv  contributors.txt  darkjoke.txt  dmthreaten.txt  dumbdeath.csv  egg.json  emojis.txt  roast.txt  serverData.json  typingrace.txt  uninspire.txt  upvoteData.json  urmom.txt  userSettings.json  userSnipeCache.json  wc.json  welcome_message.txt  wyr_options.json
legal_docs/: LICENCE.md  priv_policy.md  priv_policy.txt  terms_of_use.md  terms_of_use.txt
logs/: discord.log.2023-03-06_15  discord.log.2023-03-09_08  discord.log.2023-03-09_09  discord.log.2023-03-09_12  discord.log.2023-03-09_13  discord.log.2023-03-09_16  discord.log.2023-03-09_17  discord.log.2023-03-09_18  discord.log.2023-03-09_19  discord.log.2023-03-09_20  discord.log.2023-03-09_22  discord.log.2023-03-09_23  discord.log.2023-03-10_00  discord.log.2023-03-10_01  discord.log.2023-03-10_03  discord.log.2023-03-10_05  discord.log.2023-03-10_07  discord.log.2023-03-10_08  discord.log.2023-03-10_10  discord.log.2023-03-10_11  discord.log.2023-03-10_15  discord.log.2023-03-10_18  discord.log.2023-03-10_19  discord.log.2023-03-10_20  (+18 more)
(+51 files in other folders)
